Final draft of BI2. About bio fix on mobile.

--- a/src/styles/hiivelabs.com/about.css
+++ b/src/styles/hiivelabs.com/about.css
@@ -1,7 +1,7 @@
 @layer components {
     /* about page */
     .about {
-        @apply mt-4 lg:mt-8;
+        @apply mt-8;
         h2 {
             @apply uppercase lg:pt-0 lg:mt-0;
         }
